# GestureControl

./: README.md
Unfolding/src/com/bulenkov/game2048/: Game2048.java
Unfolding/src/main/: Comms.java  MapInterface.java  Menu.java
src/: CMakeLists.txt  GestureControl.cpp  TrippingWookie.cpp
src/Gesture/: CMakeLists.txt  Gesture.cpp  Gesture.hpp
